# doubao-asr-for-ha

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  DISCLAIMER.md  Dockerfile  LICENSE  NOTICE.md  README.md  ROADMAP.md  TESTING.md  config.yaml  pyproject.toml  repository.yaml
.github/workflows/: ci.yml  release.yml
rootfs/: run.sh
tests/: __init__.py  test_audio.py  test_client.py  test_device.py  test_endpoint.py  test_handler.py  test_metrics.py  test_protocol.py  test_run_script.py
wyoming_doubao_asr/: __init__.py  __main__.py  audio.py  client.py  constants.py  device.py  endpoint.py  handler.py  metrics.py  protobuf.py  protocol.py
