[project]
name = "wyoming-doubao-asr"
version = "0.1.8"
description = "Home Assistant Wyoming ASR server backed by Doubao ASR"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
authors = [
    { name = "doubao-asr-for-ha contributors" },
]
keywords = [
    "asr",
    "doubao",
    "home-assistant",
    "speech-to-text",
    "voice-assistant",
    "wyoming",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "aiohttp>=3.9.0",
    "opuslib>=3.0.1",
    "wyoming[zeroconf]>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Tinnci/doubao-asr-for-ha"
Repository = "https://github.com/Tinnci/doubao-asr-for-ha"
Issues = "https://github.com/Tinnci/doubao-asr-for-ha/issues"
Source = "https://github.com/Tinnci/doubao-asr-for-ha"

[project.scripts]
wyoming-doubao-asr = "wyoming_doubao_asr.__main__:run"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
